pod-create.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test
  name: test
spec:
  containers:
    - image: test
      name: test
      resources: {}
      imagePullPolicy: Never
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
