mysql-service.yaml
# We want to make the mysql service accessible from outside the cluster
# so that we can test it with the Python client
apiVersion: v1
kind: Service
metadata:
  name: mysql-external
spec:
  type: NodePort
  selector:
    app: mysql
  ports:
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 3306
